--- a/khmoney/src/main/resources/templates/addressInfo.html
+++ b/khmoney/src/main/resources/templates/addressInfo.html
@@ -117,6 +117,9 @@
 	 <th:block layout:fragment="asset">
 		 <script th:src="@{js/address.js}"></script>
 		  <div lang="en" th:replace="fragments/popup_address :: popup_province"></div>
+		  <div lang="en" th:replace="fragments/popup_address :: popup_district"></div>
+		  <div lang="en" th:replace="fragments/popup_address :: popup_commune"></div>
+		  <div lang="en" th:replace="fragments/popup_address :: popup_village"></div>
 	 </th:block>
 </body>
 </html>
