--- a/khmoney/src/main/resources/templates/fragments/popup_address.html
+++ b/khmoney/src/main/resources/templates/fragments/popup_address.html
@@ -170,7 +170,7 @@
 			
 		</div>
 		<div class="t_line">
-			<a href="javascript:" class="btn_confirm" id="btn_add_commune">បន្ថែម</a>
+			<a href="javascript:" class="btn_confirm" id="btn_add_village">បន្ថែម</a>
 			<a href="javascript:" class="btn_cancel">បោះបង់</a>
 		</div>
 	</div>	
