--- a/khmoney/src/main/resources/templates/loan.html
+++ b/khmoney/src/main/resources/templates/loan.html
@@ -49,9 +49,11 @@
 					<ul>
 						<li class="on" ><a href="javascript:"  class="tabLinks" onClick="openTabLinke(this, 'pay_constand')">អ្នកបង់ថេរ</a></li>
 						<li><a href="javascript:"  class="tabLinks" onClick="openTabLinke(this, 'pay_down')">អ្នកបង់ថយ</a></li>
+
 					</ul> 
 					
 					<div class="f_right">
+						<a th:href="@{/loan/loanNew}" class="btn_addnew"><span class="blind">add new</span></a>
 						<a th:href="@{/loan/loanNew}" class="btn_addnew"><span class="blind">add new</span></a>
 						<!-- <div class="srch_wrap">
 							<div class="srch_box">
